从服务器端获取OJ刷题数据并显示

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "iview": "^3.2.2",
     "pug": "^2.0.3",
     "vue": "^2.5.2",
