学习经历与成绩证明

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-base": "^1.0.0",
     "iview": "^3.2.2",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "pug": "^2.0.3",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -35,7 +39,7 @@
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
