--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "pug": "^2.0.3",
     "style-loader": "^0.23.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-waterfall": "^1.0.6"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
