--- a/static/projectInfo.json
+++ b/static/projectInfo.json
@@ -8,20 +8,8 @@
         "link": "https://dev.jxtxzzw.com/knowledge_graph/"
       }
     ],
-    "description": "一个简单的知识图谱平台。",
+    "description": "为知识图谱项目的负责教师开发一个前端可视化页面，这个页面基于Vue.js，目的是提供一个可视化界面将图关系中的三元组数据转化为结点关系（点）和从属关系（边），以图的方式显示出来，并提供易于用户操作的界面，支持增加、删除结点和关系、支持新建推理规则、支持导入和导出，后期视使用情况增加不同权限的用户角色。",
     "date": "2019-01-28"
-  },
-  {
-    "title": "壁画拯救",
-    "logo": "https://dev.jxtxzzw.com/images/fresco.jpg",
-    "href": [
-      {
-        "prompt": "专题页建设中……",
-        "link": "#"
-      }
-    ],
-    "description": "一个关于壁画拯救的项目。将拍摄的二维的图像展开到三维拼合，生成点云，最后还原到二维保存。",
-    "date": "2018-11-09"
   },
   {
     "title": "ECNU Online Judge APP",
@@ -32,19 +20,7 @@
         "link": "https://dev.jxtxzzw.com/eoj_app/"
       }
     ],
-    "description": "本项目意在根据学生做题的通过率等信息，智能推荐一条适合每位同学的个性化学习路径。2019年9月份计算机系同学上机时候就要APP、配套教材、OJ系统一起使用了，所以是必须完成的，不过现在什么都没有开始。",
+    "description": "计算机系Online Judge系统需要开发移动端，我们使用了React Native框架进行移动端的开发，主要是为了给同学们提供手机端浏览题目、扫码观看教师视频讲解、讨论区讨论解题思路、发布代码悬赏找BUG的功能，后期会加入智能学习路径推荐，意在根据每位同学的做题情况推荐个性化的知识点学习路径。",
     "date": "2019-01-25"
-  },
-  {
-    "title": "Death of Deadline",
-    "logo": "https://dev.jxtxzzw.com/images/deadline.jpg",
-    "href": [
-      {
-        "prompt": "专题页建设中……",
-        "link": "#"
-      }
-    ],
-    "description": "自娱自乐的项目。为了方便在各个寝室之间互相提醒Deadline以及发布作业答案的共享……主要还是为了学习一个新的框架方便以后做事。",
-    "date": "2018-12-01"
   }
 ]
