--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
+    "nuxt-matomo": "^1.2.3",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
