--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "vue-loader": "^15.9.0",
-    "vue-waterfall-easy": "^2.4.4"
+    "vue-waterfall-easy": "^2.4.4",
+    "@babel/compat-data": "7.9.0"
   },
   "devDependencies": {}
 }
