--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
+
     "@nuxtjs/axios": "^5.9.5",
-    "babel-loader": "^8.0.6",
     "css-base": "^1.0.0",
     "iview": "^3.1.5",
     "less": "^3.11.1",
@@ -29,8 +27,14 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "vue-loader": "^15.9.0",
-    "vue-waterfall-easy": "^2.4.4",
-    "@babel/compat-data": "7.9.0"
+    "vue-waterfall-easy": "^2.4.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/compat-data": "7.9.0",
+    "@babel/preset-env": "^7.8.6",
+    "babel-loader": "^7.1.4",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
+  }
 }
