--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,36 @@
-# This file is a template, and might need editing before it works on your project.
-# Official framework image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/node/tags/
 image: node:latest
 
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-a-service
-#services:
-#  - mysql:latest
-#  - redis:latest
-#  - postgres:latest
+include:
+  - template: Code-Quality.gitlab-ci.yml
+  
+stages:
+  - build
+  - test
 
-# This folder is cached between builds
-# http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
   paths:
     - node_modules/
 
-build:
+install_dependencies:
+  stage: .pre
   script:
     - npm install
+    - npm install standard mocha istanbul
+  artifacts:
+    paths:
+      - node_modules/
+
+build:
+  stage: build
+  script:
     - npm run build
+  
+# test:
+#   stage: test
+#   script:
+#     - npm test
+
+coverage:
+  stage: test
+  script:
+    - ./node_modules/.bin/istanbul cover _mocha
