--- a/package.json
+++ b/package.json
@@ -1,35 +1,47 @@
 {
   "name": "resume",
-  "version": "1.0.0",
-  "description": "jxtxzzw-resume",
-  "author": "jxtxzzw",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
-    "@nuxtjs/axios": "^5.9.5",
-    "babel-loader": "^8.0.6",
-    "css-base": "^1.0.0",
-    "iview": "^3.1.5",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "node-sass": "^4.13.1",
-    "nuxt": "^2.0.0",
-    "nuxt-matomo": "^1.2.3",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "vue-loader": "^15.9.0",
-    "vue-waterfall-easy": "^2.4.4"
+    "@antv/l7": "^2.2.11",
+    "@antv/l7-maps": "^2.2.11",
+    "core-js": "^3.6.5",
+    "view-design": "^4.2.0",
+    "vue": "^2.6.11",
+    "vue-matomo": "^3.13.5-0",
+    "vue-router": "^3.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-unit-mocha": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.1.0",
+    "chai": "^4.1.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "lint-staged": "^9.5.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
