--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "view-design": "^4.2.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.18.1",
     "vue-matomo": "^3.13.5-0",
     "vue-router": "^3.2.0"
   },
