--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "iview": "^3.5.4",
     "nuxt": "^2.14.0",
+    "nuxt-i18n": "^6.15.4",
     "nuxt-matomo": "^1.2.3",
     "view-design": "^4.3.2"
   },
