翻译证书有效期，CI/CD 配置
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,12 @@ cache:
   paths:
     - node_modules/
 
+prepare_resources:
+  stage: .pre
+  script:
+    - cp -rv ./assets/data-sample ./assets/data
+    - cp -rv ./static/data-sample ./static/data
+
 install_dependencies:
   stage: .pre
   script:
