--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,15 +7,13 @@ cache:
   paths:
     - node_modules/
 
-prepare_resources:
-  stage: .pre
-  script:
-    - cp -rv ./assets/data-sample ./assets/data
-    - cp -rv ./static/data-sample ./static/data
-
 install_dependencies:
   stage: .pre
   script:
+    - rm -rf ./assets/data
+    - cp -rv ./assets/data-sample ./assets/data
+    - rm -rf ./static/data
+    - cp -rv ./static/data-sample ./static/data
     - npm install
 
 lint:
@@ -26,11 +24,19 @@ lint:
 build:
   stage: build
   script:
+    - rm -rf ./assets/data
+    - cp -rv ./assets/data-sample ./assets/data
+    - rm -rf ./static/data
+    - cp -rv ./static/data-sample ./static/data
     - npm run build
 
 generate:
   stage: build
   script:
+    - rm -rf ./assets/data
+    - cp -rv ./assets/data-sample ./assets/data
+    - rm -rf ./static/data
+    - cp -rv ./static/data-sample ./static/data
     - npm run generate
   artifacts:
     paths:
