--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nuxt": "^2.14.7",
     "nuxt-i18n": "^6.15.4",
     "nuxt-matomo": "^1.2.3",
-    "view-design": "^4.4.0"
+    "view-design": "^4.4.0",
+    "vue-waterfall-easy": "^2.4.4"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
