--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,7 @@ cache:
 before_script:
   - mkdir -p ~/.ssh
   - eval $(ssh-agent -s)
-  - echo "$HOST_NAME" > ~/.ssh/known_hosts 
-  - echo , >> ~/.ssh/known_hosts 
-  - echo "$HOST_KEY" >> ~/.ssh/known_hosts
+  - echo "$HOST_NAME","$HOST_KEY" > ~/.ssh/known_hosts 
   - chmod 644 ~/.ssh/known_hosts
   - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
   - chmod 600 ~/.ssh/id_rsa
