--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ load_resources:
     - scp -i ~/.ssh/key.pem -rv ${USER}@${HOST_NAME}:$RESOURCES_DIR/static-data ./static/data
     - RESUME_DATE=`date +%Y-%m-%d`
     - echo sed \"s/\\\"updated\\\":[ ]*\\\"[0-9]\\{4\\}-[0-9]\\{2\\}-[0-9]\\{2\\}\\\"/\\\"updated\\\":\\\"$RESUME_DATE\\\"/g\" > ./update_time.sh
-    - ping 127.0.0.1
+    - ping 127.0.0.1 -c 10
     - cat ./assets/data/setting.json | sh ./update_time.sh > ./assets/data/setting.json
 
 install_dependencies:
