--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,9 @@ load_resources:
     - scp -i ~/.ssh/key.pem -rv ${USER}@${HOST_NAME}:$RESOURCES_DIR/assets-data ./assets/data
     - scp -i ~/.ssh/key.pem -rv ${USER}@${HOST_NAME}:$RESOURCES_DIR/static-data ./static/data
     - RESUME_DATE=`date +%Y-%m-%d`
-    - cat ./assets/data/setting.json
     - echo sed \"s/\\\"updated\\\":[ ]*\\\"[0-9]\\{4\\}-[0-9]\\{2\\}-[0-9]\\{2\\}\\\"/\\\"updated\\\":\\\"$RESUME_DATE\\\"/g\" > ./update_time.sh
-    - cat ./update_time.sh
-    - cat ./assets/data/setting.json | sh ./update_time.sh > ./assets/data/setting.json
-    - cat ./assets/data/setting.json
+    - cat ./assets/data/setting.json | sh ./update_time.sh > ./assets/data/setting2.json
+    - mv ./assets/data/setting2.json ./assets/data/setting.json -fv
 
 install_dependencies:
   stage: .pre
