--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ github:
   script:
     - git clone https://github.com/${GITHUB_REPO_OWNER}/${GITHUB_REPO_NAME}
     - cd ${GITHUB_REPO_NAME}
-    - echo https://${GITHUB_USER_NAME}:{GITHUB_PASSWORD}@github.com > .git-credentials
+    - echo https://${GITHUB_USER_NAME}:${GITHUB_PASSWORD}@github.com > .git-credentials
     - git config --global credential.helper store
     - git config user.email ${GITHUB_USER_EMAIL}
     - git config user.name '${GITHUB_USER_NAME}'
@@ -75,5 +75,6 @@ github:
     - cp -rv ../dist/* ./
     - git add .
     - COMMIT_MESSAGE="[GitLab CI/CD] ${CI_COMMIT_TIMESTAMP} ${CI_PIPELINE_SOURCE} ${CI_COMMIT_SHORT_SHA} (${CI_COMMIT_TITLE}) at ${CI_SERVER_HOST}(${CI_SERVER_VERSION_MAJOR}) ${CI_PROJECT_PATH}, ID ${CI_PIPELINE_ID} using Runner ${CI_RUNNER_ID} (${CI_RUNNER_SHORT_TOKEN})"
-    - git commit -m "$COMMIT_MESSAGE"
+    - echo ${COMMIT_MESSAGE}
+    - git commit -m "${COMMIT_MESSAGE}"
     - git push
