--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ pages:
 github:
   stage: deploy
   script:
-    - git clone https://github.com/${GITHUB_REPO_OWNER}/${GITHUB_REPO_NAME}
+    - git clone https://"${GITHUB_USER_NAME}":"${GITHUB_PASSWORD}"@github.com/${GITHUB_REPO_OWNER}/${GITHUB_REPO_NAME}
     - cd ${GITHUB_REPO_NAME}
     - echo https://"${GITHUB_USER_NAME}":"${GITHUB_PASSWORD}"@github.com > .git-credentials
     - git config --global credential.helper store
@@ -74,7 +74,9 @@ github:
     - rm -rfv ./*
     - cp -rv ../dist/* ./
     - git add .
-    - COMMIT_MESSAGE="[GitLab CI/CD] ${CI_COMMIT_TIMESTAMP} ${CI_PIPELINE_SOURCE} ${CI_COMMIT_SHORT_SHA} (${CI_COMMIT_TITLE}) at ${CI_SERVER_HOST} (${CI_SERVER_VERSION}, ${CI_SERVER_REVISION}) ${CI_PROJECT_PATH}, ID ${CI_PIPELINE_IID} (global ${CI_PIPELINE_ID}) using Runner ${CI_RUNNER_ID} (${CI_RUNNER_SHORT_TOKEN}, version ${CI_RUNNER_REVISION}), by ${GITLAB_USER_NAME}"
-    - echo ${COMMIT_MESSAGE}
-    - git commit -m "${COMMIT_MESSAGE}"
+    - COMMIT_MESSAGE_HEAD="[GitLab CI/CD] ${CI_COMMIT_TIMESTAMP}"
+    - COMMIT_MESSAGE_BODY="${CI_PIPELINE_SOURCE} ${CI_COMMIT_SHORT_SHA} (${CI_COMMIT_TITLE}) at ${CI_SERVER_HOST} (${CI_SERVER_VERSION}, ${CI_SERVER_REVISION}) ${CI_PROJECT_PATH}, ID ${CI_PIPELINE_IID} (global ${CI_PIPELINE_ID}) using Runner ${CI_RUNNER_ID} (${CI_RUNNER_SHORT_TOKEN}, version ${CI_RUNNER_REVISION}), by ${GITLAB_USER_NAME}"
+    - echo ${COMMIT_MESSAGE_HEAD}
+    - echo ${COMMIT_MESSAGE_BODY}
+    - git commit -m "${COMMIT_MESSAGE_HEAD}" -m "${COMMIT_MESSAGE_BODY}"
     - git push
