--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,8 +75,9 @@ git:
     - cp -rv ../dist/* ./
     - touch .nojekyll
     - git add .
-    - COMMIT_MESSAGE_HEAD="[GitLab CI/CD] ${CI_COMMIT_TIMESTAMP}"
-    - COMMIT_MESSAGE_BODY="${CI_PIPELINE_SOURCE} ${CI_COMMIT_SHORT_SHA} (${CI_COMMIT_TITLE}) at ${CI_SERVER_HOST} (${CI_SERVER_VERSION}, ${CI_SERVER_REVISION}) ${CI_PROJECT_PATH}, ID ${CI_PIPELINE_IID} (global ${CI_PIPELINE_ID}) using Runner ${CI_RUNNER_ID} (${CI_RUNNER_SHORT_TOKEN}, version ${CI_RUNNER_REVISION}), by ${GITLAB_USER_NAME}"
+    - CURRENT_TIME=`date +%FT%T%:z`
+    - COMMIT_MESSAGE_HEAD="[GitLab CI/CD] ${CURRENT_TIME}"
+    - COMMIT_MESSAGE_BODY="Triggered by ${CI_PIPELINE_SOURCE}, on commit ${CI_COMMIT_SHORT_SHA} (${CI_COMMIT_TITLE}) at ${CI_COMMIT_TIMESTAMP}, from ${CI_SERVER_HOST} (${CI_SERVER_VERSION}, ${CI_SERVER_REVISION}) ${CI_PROJECT_PATH}, ID ${CI_PIPELINE_IID} (global ${CI_PIPELINE_ID}), using Runner ${CI_RUNNER_ID} (${CI_RUNNER_SHORT_TOKEN}, version ${CI_RUNNER_REVISION}), by ${GITLAB_USER_NAME}"
     - echo ${COMMIT_MESSAGE_HEAD}
     - echo ${COMMIT_MESSAGE_BODY}
     - git commit -m "${COMMIT_MESSAGE_HEAD}" -m "${COMMIT_MESSAGE_BODY}"
