--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
     }
   },
   "dependencies": {
+    "@antv/g2": "^4.1.1",
     "@antv/l7": "^2.2.41",
     "@antv/l7-maps": "^2.2.41",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "ant-design-vue": "^1.7.2",
     "iview": "^3.5.4",
     "nuxt": "^2.14.7",
     "nuxt-i18n": "^6.15.4",
