--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     }
   },
   "dependencies": {
+    "@antv/data-set": "^0.11.7",
     "@antv/g2": "^4.1.1",
     "@antv/l7": "^2.2.41",
     "@antv/l7-maps": "^2.2.41",
