--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,3 +93,7 @@ sast:
   stage: test
 include:
   - template: Security/SAST.gitlab-ci.yml
+  - template: Dependency-Scanning.gitlab-ci.yml
+  - template: Container-Scanning.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
+  - template: Security/License-Scanning.gitlab-ci.yml
