--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,8 @@ before_script:
   - node --version
   - npm --version
   - python3 --version
+  - pip3 --version
+  - pip3 install requests
 
 load_resources:
   stage: .pre
