--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ generate:
     - cd ../
     - npm run generate
   artifacts:
+    expire_in: 1 week
     paths:
       - dist/
 
@@ -66,6 +67,7 @@ pages:
     - mkdir -vp ./public
     - mv ./dist/* ./public/ -v
   artifacts:
+    expire_in: 1 week
     paths:
       - public
   only:
