--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.8",
-    "@antv/g2": "^4.2.8",
-    "@antv/l7": "^2.8.47",
-    "@antv/l7-maps": "^2.8.47",
+    "@antv/g2": "4.2.8",
+    "@antv/l7": "2.8.47",
+    "@antv/l7-maps": "2.8.47",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -40,7 +40,7 @@
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.20.0",
     "nuxt-matomo": "^1.2.4",
-    "view-design": "^4.7.0",
+    "view-design": "4.7.0",
     "vue-codemirror": "^4.0.6",
     "vue-waterfall-easy": "^2.4.4"
   },
